--- a/public/gmailNotifier.html
+++ b/public/gmailNotifier.html
@@ -15,6 +15,6 @@
 	
 	<script type="text/javascript" src="http://js.pusher.com/1.12/pusher.min.js"></script>	
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>	
-	<script type="text/javascript" src="javascripts/main.js"></script>	
+	<script type="text/javascript" src="javascripts/gmailNotifier.js"></script>	
 </body>
 </html>
