--- a/public/gmailNotifier.html
+++ b/public/gmailNotifier.html
@@ -11,6 +11,11 @@
 	<p>If you email to "personaCubic@gmail.com",</p>
 	<p>you will be notified very promptly in this browser.</p>
 	
+	<input id='signInID' type='text' value="personaCubic@gmail.com" placeholder="ID" />
+	<input id='signInPW' type='password'  value="11112222" placeholder="Password" />
+	<input id='notificationEnabled' type='button' value='Enable' />
+	<input id='notificationDisabled' type='button' value='Disable' />
+	
 	<div id='result'></div>
 	
 	<script type="text/javascript" src="http://js.pusher.com/1.12/pusher.min.js"></script>	
