--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<link rel='stylesheet' type='text/css' href='stylesheets/main.css' />	
 </head>
 <body>	
-	<h3>Items for Google HackFair Contest</h3>
+	<h3>Items for Google HackFair Contest_v0.1</h3>
 	<ul>
 		<li><a href="alarme">ALARME</a></li>
 		<li><a href="gmailNotifier.html">GMAIL NOTIFIER</a></li>
